--- a/index.html
+++ b/index.html
@@ -1,46 +1,46 @@
 <!DOCTYPE html>
 <html>
-  	<head>
-    	<title>Redux basic example</title>
+<head>
+    <title>Redux basic example</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-  	</head>
-  	<body>
-		<section class="todoapp">
-			<header className="header">
-			<h1>todos</h1>
-			<input class="new-todo" placeholder="What needs to be done?" />
-			</header>
-			<main class="main">
-				<ul class="todo-list"></ul>
-			</main>
-			<footer class="footer">
-				<span class="todo-count"></span>
-				<ul class="filters">
-					<li>
-						<a href="#/" class="selected">All</a>
-					</li>
-					<li>
-						<a href="#/active">Active</a>
-					</li>
-					<li>
-						<a href="#/completed">Completed</a>
-					</li>
-				</ul>
-				<button class="clear-completed">Clear completed</button>
-			</footer>
-		</section>
-		<footer class="info">
-			<p>Double-click to edit a todo</p>
-			<p>Created by <a href="http://twitter.com/oscargodson">Oscar Godson</a></p>
-			<p>Refactored by <a href="https://github.com/cburgmer">Christoph Burgmer</a></p>
-			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
-		</footer>
+</head>
+<body>
+<section class="todoapp">
+    <header className="header">
+        <h1>todos</h1>
+        <input type="text" class="new-todo"
+               placeholder="What needs to be done?"/>
+    </header>
+    <main class="main">
+        <ul class="todo-list"></ul>
+    </main>
+    <footer class="footer">
+        <span class="todo-count"></span>
+        <ul class="filters">
+            <li>
+                <button class="selected all">All</button>
+            </li>
+            <li>
+                <button href="#/active" class="active">Active</button>
+            </li>
+            <li>
+                <button href="#/completed" class="completed">Completed</button>
+            </li>
+        </ul>
+        <button class="clear-completed">Clear completed</button>
+    </footer>
+</section>
+<footer class="info">
+    <p>Double-click to edit a todo</p>
+    <p>Created by <a href="http://twitter.com/oscargodson">Oscar Godson</a></p>
+    <p>Refactored by <a href="https://github.com/cburgmer">Christoph Burgmer</a></p>
+    <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+</footer>
 
-		<script src="https://npmcdn.com/redux@latest/dist/redux.js"></script>
-		<script src="polyfill.js"></script>
-		<script src="actionTypes.js"></script>
-		<script src="actions.js"></script>
-		<script src="reducers.js"></script>
-		<script src="app.js"></script>
-  	</body>
+<script src="https://npmcdn.com/redux@latest/dist/redux.js"></script>
+<script src="actionTypes.js"></script>
+<script src="actions.js"></script>
+<script src="reducers.js"></script>
+<script src="app.js"></script>
+</body>
 </html>
