Clear completed and Filter

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <span class="todo-count"></span>
         <ul class="filters">
             <li>
-                <button class="selected all">All</button>
+                <a class="selected all">All</a>
             </li>
             <li>
-                <button href="#/active" class="active">Active</button>
+                <a href="#/active" class="active">Active</a>
             </li>
             <li>
-                <button href="#/completed" class="completed">Completed</button>
+                <a href="#/completed" class="completed">Completed</a>
             </li>
         </ul>
         <button class="clear-completed">Clear completed</button>
@@ -32,8 +32,7 @@
 </section>
 <footer class="info">
     <p>Double-click to edit a todo</p>
-    <p>Created by <a href="http://twitter.com/oscargodson">Oscar Godson</a></p>
-    <p>Refactored by <a href="https://github.com/cburgmer">Christoph Burgmer</a></p>
+    <p>Created by <a href="http://twitter.com/anshusaurav">Anshu Saurabh</a></p>
     <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 </footer>
 
