--- a/index.html
+++ b/index.html
@@ -1,45 +1,55 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Redux basic example</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-<body>
-<section class="todoapp">
-    <header className="header">
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+  </head>
+  <body>
+    <section class="todoapp">
+      <header className="header">
         <h1>todos</h1>
-        <input type="text" class="new-todo"
-               placeholder="What needs to be done?"/>
-    </header>
-    <main class="main">
+        <div class="header-todo">
+          <input id="toggle-all" class="toggle-all" type="checkbox" /><label
+            for="toggle-all"
+          ></label>
+          <input
+            type="text"
+            class="new-todo"
+            placeholder="What needs to be done?"
+          />
+        </div>
+      </header>
+      <main class="main">
         <ul class="todo-list"></ul>
-    </main>
-    <footer class="footer">
+      </main>
+      <footer class="footer">
         <span class="todo-count"></span>
         <ul class="filters">
-            <li>
-                <a class="selected all">All</a>
-            </li>
-            <li>
-                <a href="#/active" class="active">Active</a>
-            </li>
-            <li>
-                <a href="#/completed" class="completed">Completed</a>
-            </li>
+          <li>
+            <a class="selected all">All</a>
+          </li>
+          <li>
+            <a href="#/active" class="active">Active</a>
+          </li>
+          <li>
+            <a href="#/completed" class="completed">Completed</a>
+          </li>
         </ul>
         <button class="clear-completed">Clear completed</button>
+      </footer>
+    </section>
+    <footer class="info">
+      <p>Double-click to edit a todo</p>
+      <p>
+        Created by <a href="http://twitter.com/anshusaurav">Anshu Saurabh</a>
+      </p>
+      <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
     </footer>
-</section>
-<footer class="info">
-    <p>Double-click to edit a todo</p>
-    <p>Created by <a href="http://twitter.com/anshusaurav">Anshu Saurabh</a></p>
-    <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
-</footer>
 
-<script src="https://npmcdn.com/redux@latest/dist/redux.js"></script>
-<script src="actionTypes.js"></script>
-<script src="actions.js"></script>
-<script src="reducers.js"></script>
-<script src="app.js"></script>
-</body>
+    <script src="https://npmcdn.com/redux@latest/dist/redux.js"></script>
+    <script src="actionTypes.js"></script>
+    <script src="actions.js"></script>
+    <script src="reducers.js"></script>
+    <script src="app.js"></script>
+  </body>
 </html>
